# IEMPluginSuite

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  Dependencies.cmake  Versions.cmake  macOS_buildDebugVST3Only.sh  macOS_buildForRelease.sh  macOS_createXCodeProject.sh
.git-ci/: fftw4win.sh  gitlab-iem.yml
AllRADecoder/: CMakeLists.txt
AllRADecoder/Source/: EnergyDistributionVisualizer.h  LoudspeakerTableComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
BinauralDecoder/: CMakeLists.txt
BinauralDecoder/Source/: PluginProcessor.cpp
CoordinateConverter/: CMakeLists.txt
CoordinateConverter/Source/: PluginEditor.cpp  PluginProcessor.cpp
DirectionalCompressor/: CMakeLists.txt
DirectionalCompressor/Source/: PluginProcessor.cpp
DirectivityShaper/: CMakeLists.txt
DirectivityShaper/Source/: DirectivityVisualizer.h  PluginProcessor.cpp  ShapeAndOrderXyPad.h
DistanceCompensator/: CMakeLists.txt
DistanceCompensator/Source/: PluginEditor.cpp  PluginProcessor.cpp
DualDelay/: CMakeLists.txt
DualDelay/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
EnergyVisualizer/: CMakeLists.txt
EnergyVisualizer/Source/: PluginEditor.cpp  PluginProcessor.cpp  VisualizerColormap.h
FdnReverb/: CMakeLists.txt
FdnReverb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  T60Visualizer.h
GranularEncoder/: CMakeLists.txt
GranularEncoder/Source/: Grain.cpp  PluginProcessor.cpp
MatrixMultiplier/: CMakeLists.txt
MatrixMultiplier/Source/: PluginEditor.cpp  PluginProcessor.cpp
MultiBandCompressor/: CMakeLists.txt
MultiBandCompressor/Source/: FilterBankVisualizer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
MultiEQ/: CMakeLists.txt
MultiEQ/Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
MultiEncoder/: CMakeLists.txt
MultiEncoder/Source/: EncoderList.h  EnergySpherePanner.h  MasterControlWithText.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
OmniCompressor/: CMakeLists.txt
OmniCompressor/Source/: PluginProcessor.cpp
ProbeDecoder/: CMakeLists.txt
ProbeDecoder/Source/: PluginEditor.cpp  PluginProcessor.cpp
RoomEncoder/: CMakeLists.txt
RoomEncoder/Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  ReflectionsVisualizer.h
SceneRotator/: CMakeLists.txt
SceneRotator/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SimpleDecoder/: CMakeLists.txt
SimpleDecoder/Source/: DecoderInfoBox.h  PluginEditor.cpp  PluginProcessor.cpp
SimpleDecoder/Source/Presets/: CUBE.json  t_design_10.json  t_design_12ch.json  t_design_24ch.json  t_design_36ch.json  t_design_48ch.json  t_design_60ch.json
StereoEncoder/: CMakeLists.txt
StereoEncoder/Source/: PluginProcessor.cpp
ToolBox/: CMakeLists.txt
ToolBox/Source/: PluginEditor.cpp  PluginProcessor.cpp
_configurationFiles/: export_t_design.py  t_design_10.json  t_design_12ch.json  t_design_24ch.json  t_design_36ch.json  t_design_48ch.json  t_design_60ch.json
resources/: AmbisonicRotator.h  AmbisonicWarp.h  AudioProcessorBase.h  ConfigurationHelper.h  FeedbackDelayNetwork.h  MultiChannelFilter.h
resources/OSC/: OSCStatus.cpp
resources/Standalone/: IEM_AudioDeviceSelectorComponent.cpp
resources/customComponents/: CompressorVisualizer.h  FilterVisualizer.h  HammerAitovGrid.h  LevelMeter.h  MailBox.h  MuteSoloButton.h  RoundButton.h  SimpleLabel.h  SpherePanner.h  TitleBar.h
resources/lookAndFeel/: IEM_LaF.h
